[gd_scene load_steps=2 format=3 uid="uid://unit_info_panel"]

[ext_resource type="Script" path="res://scripts/ui/unit_info_panel.gd" id="1_script"]

[node name="UnitInfoPanel" type="PanelContainer"]
offset_right = 250.0
offset_bottom = 120.0
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="UnitNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Unit Name"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HP: 100 / 100"

[node name="AttackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attack: 20"

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Speed: 3.0"
